test(gig-service): update Controller, Repository, and Service tests for new DTO and Entity schemas